--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -1,16 +1,24 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
-  <connectionStrings>
-    <add name="DbString" connectionString="Server=DESKTOP-IPDVQI7;Database=DemoDB;Trusted_Connection=True;MultipleActiveResultSets=true"/>
-  </connectionStrings>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-        <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    </configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <connectionStrings>
+        <remove name="LocalSqlServer" />
+    <add name="DatabaseContext" connectionString="Data Source=DESKTOP-IPDVQI7;Initial Catalog=DemoDb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add
+  name="DbString1"
+  connectionString="Data Source=DESKTOP-IPDVQI7;Initial Catalog=DemoDb;Integrated Security=True;Pooling=False;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;"
+  providerName="System.Data.SqlClient"
+    />-->
+    <!--<add name="StringDBContext" connectionString="Server=FAISAL-PATHAN\SQLEXPRESS;Initial Catalog=DemoDB;Persist Security Info=False;User ID=sa;Password=vision;MultipleActiveResultSets=True;Encrypt=False;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />-->
+  </connectionStrings>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
